@@ -62,7 +62,6 @@ import greencity.filters.UserSpecification;
 import greencity.repository.LanguageRepo;
 import greencity.repository.UserDeactivationRepo;
 import greencity.repository.UserLocationRepo;
-import greencity.repository.UserNotificationPreferenceRepo;
 import greencity.repository.UserRepo;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -143,12 +142,9 @@ class UserServiceImplTest {
     UserLocationRepo userLocationRepo;
 
     @Mock
-    UserNotificationPreferenceRepo userNotificationPreferenceRepo;
-
-    @Mock
     private SimpMessagingTemplate messagingTemplate;
 
-    private User user = User.builder()
+    private final User user = User.builder()
         .id(1L)
         .name("Taras")
         .email("test@gmail.com")
@@ -160,12 +156,12 @@ class UserServiceImplTest {
         .socialNetworks(new ArrayList<>())
         .build();
 
-    private User user1 = User.builder()
+    private final User user1 = User.builder()
         .uuid("444e66e8-8daa-4cb0-8269-a8d856e7dd15")
         .name("Nazar")
         .build();
 
-    private UserVO userVO = UserVO.builder()
+    private final UserVO userVO = UserVO.builder()
         .id(1L)
         .name("Test Testing")
         .email("test@gmail.com")
@@ -176,7 +172,7 @@ class UserServiceImplTest {
         .dateOfRegistration(LocalDateTime.now())
         .socialNetworks(new ArrayList<>())
         .build();
-    private User user2 = User.builder()
+    private final User user2 = User.builder()
         .id(2L)
         .name("Test Testing")
         .email("test2@gmail.com")
@@ -186,7 +182,7 @@ class UserServiceImplTest {
         .lastActivityTime(LocalDateTime.of(2020, 10, 10, 20, 10, 10))
         .dateOfRegistration(LocalDateTime.now())
         .build();
-    private UserVO userVO2 =
+    private final UserVO userVO2 =
         UserVO.builder()
             .id(2L)
             .name("Test Testing")
@@ -197,18 +193,18 @@ class UserServiceImplTest {
             .lastActivityTime(LocalDateTime.of(2020, 10, 10, 20, 10, 10))
             .dateOfRegistration(LocalDateTime.now())
             .build();
-    private UbsCustomerDto ubsCustomerDto =
+    private final UbsCustomerDto ubsCustomerDto =
         UbsCustomerDto.builder()
             .name("Nazar")
             .phoneNumber("09876543322")
             .email("nazar98struk.gmail.com")
             .build();
 
-    private Long userId = user.getId();
+    private final Long userId = user.getId();
 
-    private Long habitId = 1L;
-    private Long userId2 = user2.getId();
-    private String userEmail = user.getEmail();
+    private final Long habitId = 1L;
+    private final Long userId2 = user2.getId();
+    private final String userEmail = user.getEmail();
 
     @InjectMocks
     private UserServiceImpl userService;
@@ -368,9 +364,6 @@ class UserServiceImplTest {
     void findByIdTest() {
         Long id = 1L;
 
-        User user = new User();
-        user.setId(1L);
-
         when(userRepo.findById(id)).thenReturn(Optional.of(user));
         when(modelMapper.map(user, UserVO.class)).thenReturn(userVO);
         assertEquals(userVO, userService.findById(id));
@@ -413,10 +406,10 @@ class UserServiceImplTest {
 
     @Test
     void findAllTest() {
-        List<UserVO> userVO = List.of(ModelUtils.getUserVO(), ModelUtils.getUserVO(), ModelUtils.getUserVO());
+        List<UserVO> userVOList = List.of(ModelUtils.getUserVO(), ModelUtils.getUserVO(), ModelUtils.getUserVO());
         when(modelMapper.map(userRepo.findAll(), new TypeToken<List<UserVO>>() {
-        }.getType())).thenReturn(userVO);
-        assertEquals(userVO, userService.findAll());
+        }.getType())).thenReturn(userVOList);
+        assertEquals(userVOList, userService.findAll());
 
     }
 
@@ -426,13 +419,13 @@ class UserServiceImplTest {
         int pageSize = 1;
         Pageable pageable = PageRequest.of(pageNumber, pageSize);
 
-        User user = new User();
-        user.setName("Roman Romanovich");
+        User myUser = new User();
+        myUser.setName("Roman Romanovich");
 
         UserForListDto userForListDto = new UserForListDto();
         userForListDto.setName("Roman Romanovich");
 
-        Page<User> usersPage = new PageImpl<>(Collections.singletonList(user), pageable, 1);
+        Page<User> usersPage = new PageImpl<>(Collections.singletonList(myUser), pageable, 1);
         List<UserForListDto> userForListDtos = Collections.singletonList(userForListDto);
 
         PageableDto<UserForListDto> userPageableDto =
@@ -449,7 +442,6 @@ class UserServiceImplTest {
 
     @Test
     void getRoles() {
-        User user = new User();
         user.setRole(ROLE_USER);
 
         when(userRepo.findById(1L)).thenReturn(Optional.of(user));
@@ -462,7 +454,6 @@ class UserServiceImplTest {
 
     @Test
     void getEmailNotificationsStatusesTest() {
-        User user = new User();
         String email = "test@gmail.com";
         user.setEmailNotification(EmailNotification.IMMEDIATELY);
 
@@ -478,13 +469,13 @@ class UserServiceImplTest {
         int pageSize = 1;
         Pageable pageable = PageRequest.of(pageNumber, pageSize);
 
-        User user = new User();
-        user.setName("Roman Bezos");
+        User myUser = new User();
+        myUser.setName("Roman Bezos");
 
         UserForListDto userForListDto = new UserForListDto();
         userForListDto.setName("Roman Bezos");
 
-        Page<User> usersPage = new PageImpl<>(Collections.singletonList(user), pageable, 1);
+        Page<User> usersPage = new PageImpl<>(Collections.singletonList(myUser), pageable, 1);
         List<UserForListDto> userForListDtos = Collections.singletonList(userForListDto);
 
         PageableDto<UserForListDto> userPageableDto =
@@ -579,7 +570,7 @@ class UserServiceImplTest {
             .thenReturn(userPages);
         when(modelMapper.map(user, UserManagementDto.class)).thenReturn(ModelUtils.CREATE_USER_MANAGER_DTO);
         List<UserManagementDto> users = userPages.stream()
-            .map(user -> modelMapper.map(user, UserManagementDto.class))
+            .map(myUser -> modelMapper.map(myUser, UserManagementDto.class))
             .collect(Collectors.toList());
         PageableAdvancedDto<UserManagementDto> pageableAdvancedDto = new PageableAdvancedDto<>(
             users,
@@ -615,7 +606,7 @@ class UserServiceImplTest {
     @Test
     void saveUserProfileTest() {
         var request = ModelUtils.getUserProfileDtoRequest();
-        var user = ModelUtils.getUserWithSocialNetworks();
+        var myUser = ModelUtils.getUserWithSocialNetworks();
         Set<UserNotificationPreference> preferences = new HashSet<>();
         preferences.add(UserNotificationPreference.builder()
             .emailPreference(EmailPreference.SYSTEM)
@@ -625,24 +616,24 @@ class UserServiceImplTest {
             .emailPreference(EmailPreference.LIKES)
             .periodicity(EmailPreferencePeriodicity.TWICE_A_DAY)
             .build());
-        user.setNotificationPreferences(preferences);
-        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(user));
-        when(userRepo.save(user)).thenReturn(user);
+        myUser.setNotificationPreferences(preferences);
+        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(myUser));
+        when(userRepo.save(myUser)).thenReturn(myUser);
         when(googleApiService.getLocationByCoordinates(
             request.getCoordinates().getLatitude(),
             request.getCoordinates().getLongitude(),
             "uk"))
-                .thenReturn(ModelUtils.getGeocodingResult().get(0));
+                .thenReturn(ModelUtils.getGeocodingResult().getFirst());
 
         when(googleApiService.getLocationByCoordinates(
             request.getCoordinates().getLatitude(),
             request.getCoordinates().getLongitude(),
             "en"))
-                .thenReturn(ModelUtils.getGeocodingResult().get(0));
+                .thenReturn(ModelUtils.getGeocodingResult().getFirst());
         assertEquals(UpdateConstants.SUCCESS_EN, userService.saveUserProfile(request, "test@gmail.com"));
         verify(userRepo).findByEmail("test@gmail.com");
         verify(googleApiService, times(2)).getLocationByCoordinates(eq(1.0d), eq(1.0d), anyString());
-        verify(userRepo).save(user);
+        verify(userRepo).save(myUser);
     }
 
     @Test
@@ -680,15 +671,15 @@ class UserServiceImplTest {
         request.setShowShoppingList(null);
         request.setCoordinates(CoordinatesDto.builder().latitude(null).longitude(null).build());
 
-        var user = ModelUtils.getUserWithSocialNetworks();
-        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(user));
-        when(userRepo.save(user)).thenReturn(user);
+        var myUser = ModelUtils.getUserWithSocialNetworks();
+        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(myUser));
+        when(userRepo.save(myUser)).thenReturn(myUser);
 
         String result = userService.saveUserProfile(request, "test@gmail.com");
         assertEquals(UpdateConstants.SUCCESS_EN, result);
 
         verify(userRepo).findByEmail("test@gmail.com");
-        verify(userRepo).save(user);
+        verify(userRepo).save(myUser);
     }
 
     @Test
@@ -702,15 +693,15 @@ class UserServiceImplTest {
         request.setShowShoppingList(null);
         request.setCoordinates(CoordinatesDto.builder().latitude(null).longitude(1.0d).build());
 
-        var user = ModelUtils.getUserWithSocialNetworks();
-        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(user));
-        when(userRepo.save(user)).thenReturn(user);
+        var myUser = ModelUtils.getUserWithSocialNetworks();
+        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(myUser));
+        when(userRepo.save(myUser)).thenReturn(myUser);
 
         String result = userService.saveUserProfile(request, "test@gmail.com");
         assertEquals(UpdateConstants.SUCCESS_EN, result);
 
         verify(userRepo).findByEmail("test@gmail.com");
-        verify(userRepo).save(user);
+        verify(userRepo).save(myUser);
     }
 
     @Test
@@ -724,15 +715,15 @@ class UserServiceImplTest {
         request.setShowShoppingList(null);
         request.setCoordinates(CoordinatesDto.builder().latitude(1.0d).longitude(null).build());
 
-        var user = ModelUtils.getUserWithSocialNetworks();
-        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(user));
-        when(userRepo.save(user)).thenReturn(user);
+        var myUser = ModelUtils.getUserWithSocialNetworks();
+        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(myUser));
+        when(userRepo.save(myUser)).thenReturn(myUser);
 
         String result = userService.saveUserProfile(request, "test@gmail.com");
         assertEquals(UpdateConstants.SUCCESS_EN, result);
 
         verify(userRepo).findByEmail("test@gmail.com");
-        verify(userRepo).save(user);
+        verify(userRepo).save(myUser);
     }
 
     @Test
@@ -741,33 +732,33 @@ class UserServiceImplTest {
         CoordinatesDto coordinates = new CoordinatesDto(20.0000, 20.0000);
         request.setCoordinates(coordinates);
         request.setName("Dmutro");
-        var user = ModelUtils.getUserWithSocialNetworks();
-        var user2 = ModelUtils.getUser();
+        var myUser = ModelUtils.getUserWithSocialNetworks();
+        var myUser2 = ModelUtils.getUser();
         UserLocation userLocation = new UserLocation();
-        userLocation.setUsers(new ArrayList<>(Arrays.asList(user, user2)));
+        userLocation.setUsers(new ArrayList<>(Arrays.asList(myUser, myUser2)));
         when(userLocationRepo.getUserLocationByLatitudeAndLongitude(
             request.getCoordinates().getLatitude(), request.getCoordinates().getLongitude()))
                 .thenReturn(Optional.of(userLocation));
-        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(user));
-        when(userRepo.save(user)).thenReturn(user);
+        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(myUser));
+        when(userRepo.save(myUser)).thenReturn(myUser);
         when(googleApiService.getLocationByCoordinates(
             request.getCoordinates().getLatitude(),
             request.getCoordinates().getLongitude(),
             "uk"))
-                .thenReturn(ModelUtils.getGeocodingResult().get(0));
+                .thenReturn(ModelUtils.getGeocodingResult().getFirst());
 
         when(googleApiService.getLocationByCoordinates(
             request.getCoordinates().getLatitude(),
             request.getCoordinates().getLongitude(),
             "en"))
-                .thenReturn(ModelUtils.getGeocodingResult().get(0));
+                .thenReturn(ModelUtils.getGeocodingResult().getFirst());
         assertEquals(UpdateConstants.SUCCESS_EN, userService.saveUserProfile(request, "test@gmail.com"));
         verify(userRepo).findByEmail("test@gmail.com");
         verify(userLocationRepo).getUserLocationByLatitudeAndLongitude(
             request.getCoordinates().getLatitude(), request.getCoordinates().getLongitude());
         verify(googleApiService, times(2)).getLocationByCoordinates(
             eq(request.getCoordinates().getLatitude()), eq(request.getCoordinates().getLongitude()), anyString());
-        verify(userRepo).save(user);
+        verify(userRepo).save(myUser);
     }
 
     @Test
@@ -776,27 +767,27 @@ class UserServiceImplTest {
         request.setName("Dmutro");
         CoordinatesDto coordinates = new CoordinatesDto(20.0000, 20.0000);
         request.setCoordinates(coordinates);
-        var user = ModelUtils.getUserWithUserLocation();
+        var myUser = ModelUtils.getUserWithUserLocation();
         UserLocation userLocation2 = ModelUtils.getUserLocation2();
-        user.getUserLocation().setUsers(Collections.singletonList(user));
+        myUser.getUserLocation().setUsers(Collections.singletonList(myUser));
 
         when(userLocationRepo.getUserLocationByLatitudeAndLongitude(
             request.getCoordinates().getLatitude(), request.getCoordinates().getLongitude()))
                 .thenReturn(Optional.of(userLocation2));
-        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(user));
-        when(userRepo.save(user)).thenReturn(user);
+        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(myUser));
+        when(userRepo.save(myUser)).thenReturn(myUser);
         when(userLocationRepo.save(userLocation2)).thenReturn(userLocation2);
         when(googleApiService.getLocationByCoordinates(
             request.getCoordinates().getLatitude(),
             request.getCoordinates().getLongitude(),
             "uk"))
-                .thenReturn(ModelUtils.getGeocodingResult().get(0));
+                .thenReturn(ModelUtils.getGeocodingResult().getFirst());
 
         when(googleApiService.getLocationByCoordinates(
             request.getCoordinates().getLatitude(),
             request.getCoordinates().getLongitude(),
             "en"))
-                .thenReturn(ModelUtils.getGeocodingResult().get(0));
+                .thenReturn(ModelUtils.getGeocodingResult().getFirst());
         assertEquals(UpdateConstants.SUCCESS_EN, userService.saveUserProfile(request, "test@gmail.com"));
         verify(userRepo).findByEmail("test@gmail.com");
         verify(userLocationRepo).getUserLocationByLatitudeAndLongitude(
@@ -804,7 +795,7 @@ class UserServiceImplTest {
         verify(googleApiService, times(2)).getLocationByCoordinates(
             eq(request.getCoordinates().getLatitude()), eq(request.getCoordinates().getLongitude()), anyString());
         verify(userLocationRepo).save(userLocation2);
-        verify(userRepo).save(user);
+        verify(userRepo).save(myUser);
         verify(userLocationRepo).delete(any());
     }
 
@@ -814,12 +805,12 @@ class UserServiceImplTest {
         request.setName("Dmutro");
         CoordinatesDto coordinates = new CoordinatesDto(null, null);
         request.setCoordinates(coordinates);
-        var user = ModelUtils.getUserWithUserLocation();
-        user.getUserLocation().getUsers().add(user);
-        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(user));
+        var myUser = ModelUtils.getUserWithUserLocation();
+        myUser.getUserLocation().getUsers().add(myUser);
+        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(myUser));
         assertEquals(UpdateConstants.SUCCESS_EN, userService.saveUserProfile(request, "test@gmail.com"));
-        verify(userRepo).save(user);
-        assertNull(user.getUserLocation());
+        verify(userRepo).save(myUser);
+        assertNull(myUser.getUserLocation());
     }
 
     @Test
@@ -828,38 +819,38 @@ class UserServiceImplTest {
         request.setName("Dmutro");
         CoordinatesDto coordinates = new CoordinatesDto(20.0000, 20.0000);
         request.setCoordinates(coordinates);
-        var user = ModelUtils.getUserWithUserLocation();
-        var user2 = ModelUtils.getUser();
-        user.getUserLocation().getUsers().add(user);
-        user.getUserLocation().getUsers().add(user2);
+        var myUser = ModelUtils.getUserWithUserLocation();
+        var myUser2 = ModelUtils.getUser();
+        myUser.getUserLocation().getUsers().add(myUser);
+        myUser.getUserLocation().getUsers().add(myUser2);
         UserLocation userLocation2 = ModelUtils.getUserLocation2();
 
         when(userLocationRepo.getUserLocationByLatitudeAndLongitude(
             request.getCoordinates().getLatitude(), request.getCoordinates().getLongitude()))
                 .thenReturn(Optional.of(userLocation2));
-        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(user));
-        when(userRepo.save(user)).thenReturn(user);
+        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(myUser));
+        when(userRepo.save(myUser)).thenReturn(myUser);
         when(userLocationRepo.save(userLocation2)).thenReturn(userLocation2);
         when(googleApiService.getLocationByCoordinates(
             request.getCoordinates().getLatitude(),
             request.getCoordinates().getLongitude(),
             "uk"))
-                .thenReturn(ModelUtils.getGeocodingResult().get(0));
+                .thenReturn(ModelUtils.getGeocodingResult().getFirst());
 
         when(googleApiService.getLocationByCoordinates(
             request.getCoordinates().getLatitude(),
             request.getCoordinates().getLongitude(),
             "en"))
-                .thenReturn(ModelUtils.getGeocodingResult().get(0));
+                .thenReturn(ModelUtils.getGeocodingResult().getFirst());
         assertEquals(UpdateConstants.SUCCESS_EN, userService.saveUserProfile(request, "test@gmail.com"));
-        assertEquals(1, user.getUserLocation().getUsers().size());
+        assertEquals(1, myUser.getUserLocation().getUsers().size());
         verify(userRepo).findByEmail("test@gmail.com");
         verify(userLocationRepo).getUserLocationByLatitudeAndLongitude(
             request.getCoordinates().getLatitude(), request.getCoordinates().getLongitude());
         verify(googleApiService, times(2)).getLocationByCoordinates(
             eq(request.getCoordinates().getLatitude()), eq(request.getCoordinates().getLongitude()), anyString());
         verify(userLocationRepo).save(userLocation2);
-        verify(userRepo).save(user);
+        verify(userRepo).save(myUser);
     }
 
     @Test
@@ -868,26 +859,26 @@ class UserServiceImplTest {
         request.setName("Dmutro");
         CoordinatesDto coordinates = new CoordinatesDto(20.0000, 20.0000);
         request.setCoordinates(coordinates);
-        var user = ModelUtils.getUserWithUserLocation();
-        user.getUserLocation().setUsers(Collections.singletonList(user));
+        var myUser = ModelUtils.getUserWithUserLocation();
+        myUser.getUserLocation().setUsers(Collections.singletonList(myUser));
         when(userLocationRepo.getUserLocationByLatitudeAndLongitude(
             request.getCoordinates().getLatitude(), request.getCoordinates().getLongitude()))
                 .thenReturn(Optional.of(new UserLocation()));
-        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(user));
-        when(userRepo.save(user)).thenReturn(user);
+        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(myUser));
+        when(userRepo.save(myUser)).thenReturn(myUser);
 
-        when(userLocationRepo.save(user.getUserLocation())).thenReturn(user.getUserLocation());
+        when(userLocationRepo.save(myUser.getUserLocation())).thenReturn(myUser.getUserLocation());
         when(googleApiService.getLocationByCoordinates(
             request.getCoordinates().getLatitude(),
             request.getCoordinates().getLongitude(),
             "uk"))
-                .thenReturn(ModelUtils.getGeocodingResult().get(0));
+                .thenReturn(ModelUtils.getGeocodingResult().getFirst());
 
         when(googleApiService.getLocationByCoordinates(
             request.getCoordinates().getLatitude(),
             request.getCoordinates().getLongitude(),
             "en"))
-                .thenReturn(ModelUtils.getGeocodingResult().get(0));
+                .thenReturn(ModelUtils.getGeocodingResult().getFirst());
         assertEquals(UpdateConstants.SUCCESS_EN, userService.saveUserProfile(request, "test@gmail.com"));
         verify(userRepo).findByEmail("test@gmail.com");
         verify(userLocationRepo).getUserLocationByLatitudeAndLongitude(
@@ -895,7 +886,7 @@ class UserServiceImplTest {
         verify(googleApiService, times(2)).getLocationByCoordinates(
             eq(request.getCoordinates().getLatitude()), eq(request.getCoordinates().getLongitude()), anyString());
         verify(userLocationRepo).save(any());
-        verify(userRepo).save(user);
+        verify(userRepo).save(myUser);
         verify(userLocationRepo, never()).delete(any());
     }
 
@@ -915,25 +906,25 @@ class UserServiceImplTest {
         request.setName("Dmutro");
         CoordinatesDto coordinates = new CoordinatesDto(20.0000, 20.0000);
         request.setCoordinates(coordinates);
-        var user = ModelUtils.getUserWithUserLocation();
-        user.getUserLocation().setUsers(Collections.singletonList(user));
+        var myUser = ModelUtils.getUserWithUserLocation();
+        myUser.getUserLocation().setUsers(Collections.singletonList(myUser));
         when(userLocationRepo.getUserLocationByLatitudeAndLongitude(
             request.getCoordinates().getLatitude(), request.getCoordinates().getLongitude()))
-                .thenReturn(Optional.of(user.getUserLocation()));
-        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(user));
-        when(userRepo.save(user)).thenReturn(user);
-        when(userLocationRepo.save(user.getUserLocation())).thenReturn(user.getUserLocation());
+                .thenReturn(Optional.of(myUser.getUserLocation()));
+        when(userRepo.findByEmail("test@gmail.com")).thenReturn(Optional.of(myUser));
+        when(userRepo.save(myUser)).thenReturn(myUser);
+        when(userLocationRepo.save(myUser.getUserLocation())).thenReturn(myUser.getUserLocation());
         when(googleApiService.getLocationByCoordinates(
             request.getCoordinates().getLatitude(),
             request.getCoordinates().getLongitude(),
             "uk"))
-                .thenReturn(ModelUtils.getGeocodingResult().get(0));
+                .thenReturn(ModelUtils.getGeocodingResult().getFirst());
 
         when(googleApiService.getLocationByCoordinates(
             request.getCoordinates().getLatitude(),
             request.getCoordinates().getLongitude(),
             "en"))
-                .thenReturn(ModelUtils.getGeocodingResult().get(0));
+                .thenReturn(ModelUtils.getGeocodingResult().getFirst());
 
         assertEquals(UpdateConstants.SUCCESS_EN, userService.saveUserProfile(request, "test@gmail.com"));
         verify(userRepo).findByEmail("test@gmail.com");
@@ -942,7 +933,7 @@ class UserServiceImplTest {
         verify(googleApiService, times(2)).getLocationByCoordinates(
             eq(request.getCoordinates().getLatitude()), eq(request.getCoordinates().getLongitude()), anyString());
         verify(userLocationRepo).save(any());
-        verify(userRepo).save(user);
+        verify(userRepo).save(myUser);
         verify(userLocationRepo, never()).delete(any());
     }
 
@@ -979,9 +970,9 @@ class UserServiceImplTest {
     void checkIfTheUserIsOnlineEqualsTrueTest() {
         ReflectionTestUtils.setField(userService, "timeAfterLastActivity", 300000);
         Timestamp userLastActivityTime = Timestamp.valueOf(LocalDateTime.now());
-        User user = ModelUtils.getUser();
+        User myUser = ModelUtils.getUser();
 
-        when(userRepo.findById(anyLong())).thenReturn(Optional.of(user));
+        when(userRepo.findById(anyLong())).thenReturn(Optional.of(myUser));
         when(userRepo.findLastActivityTimeById(anyLong())).thenReturn(Optional.of(userLastActivityTime));
 
         assertTrue(userService.checkIfTheUserIsOnline(1L));
@@ -992,7 +983,6 @@ class UserServiceImplTest {
     @Test
     void checkIfTheUserIsOnlineEqualsFalseTest() {
         ReflectionTestUtils.setField(userService, "timeAfterLastActivity", 300000);
-        User user = ModelUtils.getUser();
 
         when(userRepo.findById(anyLong())).thenReturn(Optional.of(user));
         when(userRepo.findLastActivityTimeById(anyLong())).thenReturn(Optional.empty());
@@ -1011,7 +1001,7 @@ class UserServiceImplTest {
         Page<User> users = new PageImpl<>(userList, pageable, userList.size());
         List<UserManagementDto> userManagementDtos =
             users.getContent().stream()
-                .map(user -> modelMapper.map(user, UserManagementDto.class))
+                .map(myUser -> modelMapper.map(myUser, UserManagementDto.class))
                 .collect(Collectors.toList());
         PageableAdvancedDto<UserManagementDto> userManagementDtoPageableDto = new PageableAdvancedDto<>(
             userManagementDtos,
@@ -1064,7 +1054,7 @@ class UserServiceImplTest {
 
     @Test
     void getUserAndSixFriendsWithOnlineStatus() {
-        List<UserWithOnlineStatusDto> sixFriendsWithOnlineStatusDtos = new ArrayList<>();
+        List<UserWithOnlineStatusDto> sixFriendsWithOnlineStatusDtos;
         sixFriendsWithOnlineStatusDtos = Collections.singletonList(user)
             .stream()
             .map(u -> new UserWithOnlineStatusDto(u.getId(), true))
@@ -1094,14 +1084,15 @@ class UserServiceImplTest {
             .id(userId)
             .onlineStatus(true)
             .build();
-        List<UserWithOnlineStatusDto> friendsWithOnlineStatusDtos = new ArrayList<>();
+        List<UserWithOnlineStatusDto> friendsWithOnlineStatusDtos;
         friendsWithOnlineStatusDtos = usersPage
             .getContent()
             .stream()
             .map(u -> new UserWithOnlineStatusDto(u.getId(), true))
             .collect(Collectors.toList());
+        new UserAndAllFriendsWithOnlineStatusDto();
         UserAndAllFriendsWithOnlineStatusDto userAndAllFriendsWithOnlineStatusDto =
-            new UserAndAllFriendsWithOnlineStatusDto().builder()
+            UserAndAllFriendsWithOnlineStatusDto.builder()
                 .user(userWithOnlineStatusDto)
                 .friends(new PageableDto<>(friendsWithOnlineStatusDtos, usersPage.getTotalElements(),
                     usersPage.getPageable().getPageNumber(), usersPage.getTotalPages()))
@@ -1154,14 +1145,14 @@ class UserServiceImplTest {
     @Test
     void getDeactivationReason() {
         List<String> test1 = List.of();
-        User user = ModelUtils.getUser();
+        User myUser = ModelUtils.getUser();
         user.setLanguage(Language.builder()
             .id(1L)
             .code("en")
             .build());
         UserDeactivationReason test = UserDeactivationReason.builder()
             .id(1L)
-            .user(user)
+            .user(myUser)
             .reason("test")
             .dateTimeOfDeactivation(LocalDateTime.now())
             .build();
@@ -1178,39 +1169,39 @@ class UserServiceImplTest {
 
     @Test
     void setActivatedStatus() {
-        User user = ModelUtils.getUser();
-        user.setLanguage(Language.builder()
+        User myUser = ModelUtils.getUser();
+        myUser.setLanguage(Language.builder()
             .id(1L)
             .code("en")
             .build());
-        when(userRepo.findById(1L)).thenReturn(Optional.of(user));
-        user.setUserStatus(ACTIVATED);
-        when(userRepo.save(user)).thenReturn(user);
+        when(userRepo.findById(1L)).thenReturn(Optional.of(myUser));
+        myUser.setUserStatus(ACTIVATED);
+        when(userRepo.save(myUser)).thenReturn(myUser);
         assertEquals(UserActivationDto.builder()
-            .email(user.getEmail())
-            .name(user.getName())
-            .lang(user.getLanguage().getCode())
+            .email(myUser.getEmail())
+            .name(myUser.getName())
+            .lang(myUser.getLanguage().getCode())
             .build(), userService.setActivatedStatus(userId));
     }
 
     @Test
     void updateUserLanguage() {
         Language language = ModelUtils.getLanguage();
-        User user = ModelUtils.getUser();
-        user.setLanguage(language);
+        User myUser = ModelUtils.getUser();
+        myUser.setLanguage(language);
 
         when(languageRepo.findById(1L)).thenReturn(Optional.of(language));
-        when(userRepo.findById(1L)).thenReturn(Optional.of(user));
-        when(userRepo.save(user)).thenReturn(user);
+        when(userRepo.findById(1L)).thenReturn(Optional.of(myUser));
+        when(userRepo.save(myUser)).thenReturn(myUser);
         userService.updateUserLanguage(1L, 1L);
-        verify(userRepo).save(user);
+        verify(userRepo).save(myUser);
     }
 
     @Test
     void updateUserLanguageNotFoundExeption() {
         Language language = ModelUtils.getLanguage();
-        User user = ModelUtils.getUser();
-        user.setLanguage(language);
+        User myUser = ModelUtils.getUser();
+        myUser.setLanguage(language);
 
         when(languageRepo.findById(10L)).thenThrow(NotFoundException.class);
         assertThrows(NotFoundException.class, () -> userService.updateUserLanguage(1L, 10L));
@@ -1219,8 +1210,8 @@ class UserServiceImplTest {
     @Test
     void updateUserLanguageUserNotFoundExeption() {
         Language language = ModelUtils.getLanguage();
-        User user = ModelUtils.getUser();
-        user.setLanguage(language);
+        User myUser = ModelUtils.getUser();
+        myUser.setLanguage(language);
 
         when(languageRepo.findById(1L)).thenReturn(Optional.of(language));
         when(userRepo.findById(1L)).thenThrow(NotFoundException.class);
@@ -1282,12 +1273,12 @@ class UserServiceImplTest {
     @Test
     void markUserDeactivated() {
         String uuid = "444e66e8-8daa-4cb0-8269-a8d856e7dd15";
-        User user = ModelUtils.getUser();
-        when(userRepo.findUserByUuid(uuid)).thenReturn(Optional.of(user));
-        user.setUserStatus(DEACTIVATED);
-        when(userRepo.save(user)).thenReturn(user);
+        User myUser = ModelUtils.getUser();
+        when(userRepo.findUserByUuid(uuid)).thenReturn(Optional.of(myUser));
+        myUser.setUserStatus(DEACTIVATED);
+        when(userRepo.save(myUser)).thenReturn(myUser);
         userService.markUserAsDeactivated(uuid);
-        verify(userRepo).save(user);
+        verify(userRepo).save(myUser);
 
     }
 
@@ -1301,12 +1292,12 @@ class UserServiceImplTest {
     @Test
     void markUserActivated() {
         String uuid = "444e66e8-8daa-4cb0-8269-a8d856e7dd15";
-        User user = ModelUtils.getUser();
-        when(userRepo.findUserByUuid(uuid)).thenReturn(Optional.of(user));
-        user.setUserStatus(ACTIVATED);
-        when(userRepo.save(user)).thenReturn(user);
+        User myUser = ModelUtils.getUser();
+        when(userRepo.findUserByUuid(uuid)).thenReturn(Optional.of(myUser));
+        myUser.setUserStatus(ACTIVATED);
+        when(userRepo.save(myUser)).thenReturn(myUser);
         userService.markUserAsActivated(uuid);
-        verify(userRepo).save(user);
+        verify(userRepo).save(myUser);
 
     }
 
@@ -1321,9 +1312,9 @@ class UserServiceImplTest {
     void findUserForAchievementTest() {
         Long id = 1L;
         UserVOAchievement userVOAchievement = UserVOAchievement.builder().id(id).build();
-        User user = User.builder().id(id).build();
-        when(userRepo.findUserForAchievement(id)).thenReturn(Optional.of(user));
-        when(modelMapper.map(user, UserVOAchievement.class)).thenReturn(userVOAchievement);
+        User myUser = User.builder().id(id).build();
+        when(userRepo.findUserForAchievement(id)).thenReturn(Optional.of(myUser));
+        when(modelMapper.map(myUser, UserVOAchievement.class)).thenReturn(userVOAchievement);
         assertEquals(userVOAchievement, userService.findUserForAchievement(id));
         verify(userRepo, times(1)).findUserForAchievement(id);
     }
@@ -1331,11 +1322,11 @@ class UserServiceImplTest {
     @Test
     void createUbsRecordTest() {
         Long id = 1L;
-        User user = new User();
-        user.setId(1L);
-        when(userRepo.findById(id)).thenReturn(Optional.of(user));
-        when(modelMapper.map(user, UserVO.class)).thenReturn(userVO);
-        UbsTableCreationDto actual = UbsTableCreationDto.builder().uuid(user.getUuid()).build();
+        User myUser = new User();
+        myUser.setId(1L);
+        when(userRepo.findById(id)).thenReturn(Optional.of(myUser));
+        when(modelMapper.map(myUser, UserVO.class)).thenReturn(userVO);
+        UbsTableCreationDto actual = UbsTableCreationDto.builder().uuid(myUser.getUuid()).build();
         assertEquals(actual, userService.createUbsRecord(userVO));
     }
 
@@ -1352,13 +1343,13 @@ class UserServiceImplTest {
     void deleteUserProfilePictureTest() {
         String email = "test@gmail.com";
         String picture = "picture";
-        User user = new User();
-        user.setEmail(email);
-        user.setProfilePicturePath(picture);
-        when(userRepo.findByEmail(email)).thenReturn(Optional.of(user));
-        when(modelMapper.map(user, UserVO.class)).thenReturn(userVO);
+        User myUser = new User();
+        myUser.setEmail(email);
+        myUser.setProfilePicturePath(picture);
+        when(userRepo.findByEmail(email)).thenReturn(Optional.of(myUser));
+        when(modelMapper.map(myUser, UserVO.class)).thenReturn(userVO);
         userService.deleteUserProfilePicture(email);
-        assertNull(user.getProfilePicturePath());
+        assertNull(myUser.getProfilePicturePath());
     }
 
     @Test
@@ -1444,14 +1435,14 @@ class UserServiceImplTest {
     @Test
     void getDeactivationReasonUkTest() {
         List<String> test1 = List.of();
-        User user = ModelUtils.getUser();
-        user.setLanguage(Language.builder()
+        User myUser = ModelUtils.getUser();
+        myUser.setLanguage(Language.builder()
             .id(1L)
             .code("en")
             .build());
         UserDeactivationReason test = UserDeactivationReason.builder()
             .id(1L)
-            .user(user)
+            .user(myUser)
             .reason("test")
             .dateTimeOfDeactivation(LocalDateTime.now())
             .build();
